# h2v

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Huffman Table RFC 75451 Appendix B.txt  abseil_status.md
h2v_shared/: CMakeLists.txt
h2v_shared/inc/h2v/stream/: bit_packer.h  raw_buffer.h
h2v_shared/inc/h2v/utils/: byte_utils.h
h2v_shared/inc/h2v/utils/cli/: terminal_color.h
h2v_shared/inc/h2v/utils/yaml/: yaml_helper.h
hpack/: CMakeLists.txt
hpack/examples/: huffman_codec_roundtrip_main.cc
hpack/inc/h2v/hpack/: bit_packer.h  dynamic_table.h  entry_type.h  error_code.h  error_tracer.h  header.h  hpack_config.h  hpack_stats.h  huffman_codec.h  huffman_table.h  integer_codec.h  raw_buffer.h  static_table.h  utils.h
hpack/src/h2v/hpack/: dynamic_table.cc  error_tracer.cc  huffman_byte_table.cc  huffman_codec.cc  integer_codec.cc
hpack/src/h2v/hpack/codegen/: huffman_table_gen_main.cc  huffman_table_gen_v2_main.cc
hpack/src/h2v/hpack/codegen/v2/: fsm_4bit_nibble_gen.h  fsm_encode_gen.h  fsm_full_byte_gen.h  huffman_table.h
hpack/tests/blocks/: huffman_encode_bit_packer_main.cc
